# cplex-cmake-makefile

./: README.md
cmake/: CMakeLists.txt
makefile/: Makefile
makefile/example/: main.cpp
